src/main/resources/tests/Semantics/good/operationUnary1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
begin
   X := -2;
end ExampleProcedure;
