src/main/resources/tests/Semantics/bad/operationUnary1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
begin
   X := -true; -- This is a semantic error
end ExampleProcedure;
